# midnight-anoncreds-poc

./: Cargo.toml  README.md  flake.nix  rustfmt.toml
midnight-rev-reg/: .gitignore  package-lock.json  package.json  run.sh  tsconfig.json
midnight-rev-reg/cli/: README.md  eslint.config.mjs  package.json  standalone.yml  tsconfig.json  vitest.config.ts
midnight-rev-reg/cli/src/: api.ts  cli.ts  common-types.ts  config.ts  domain-to-runtime.ts  index.ts  logger-utils.ts  runtime-to-domain.ts  standalone.ts  testnet-local.ts  testnet-remote-start-proof-server.ts  testnet-remote.ts
midnight-rev-reg/cli/src/test/: commons.ts  did.api.test.ts  domain-to-runtime.test.ts  runtime-to-domain.test.ts
midnight-rev-reg/contract/: README.md  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
midnight-rev-reg/contract/src/: did-document.ts  did-operations.ts  did-registrar.ts  did-resolver.ts  did.compact  domain-to-ledger.ts  index.d.ts  index.js  index.js.map  index.ts  ledger-operation-builder.ts  ledger-to-domain.ts  midnight-did.ts  revreg.compact  witnesses.d.ts  witnesses.js  witnesses.js.map  witnesses.ts
midnight-rev-reg/contract/src/test/: did-document.test.ts  did-operations.test.ts  domain-to-ledger.test.ts  ledger-operation-builder.test.ts  ledger-to-domain.test.ts  midnight-did-simulator.ts  midnight-did-state.test.ts  midnight-did.test.ts  witnesses.test.ts
nix/: compactc.nix
src/: issuer.rs  lib.rs  main.rs  prover.rs  vdr.rs  verifier.rs
src/utils/: fixtures.rs  mock.rs  storage.rs
